# labredes

./: CMakeLists.txt  README.md
include/: crypto.h  tcp.h  util.h
src/: client.c  crypto.c  decrypt.c  encrypt.c  keygen.c  server.c  tcp.c  util.c
